--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
   "description": "Generate entities and repositories for Ting",
   "require": {
     "php": ">=5.5",
-    "zendframework/zend-code": "^3.1"
+    "zendframework/zend-code": "^3.1",
+    "symfony/console": "^3.3"
   }
 }
