--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
     "zendframework/zend-code": "^3.1",
     "symfony/console": "^3.3",
     "ccmbenchmark/ting": "^3.0"
+  },
+  "require-dev": {
+    "atoum/atoum": "^3.2",
+    "atoum/stubs": "^2.5",
+    "atoum/reports-extension": "^3.0"
   }
 }
