--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "ext-mbstring": "*",
     "zendframework/zend-code": "^3.1",
     "symfony/console": "^3.3",
-    "ccmbenchmark/ting": "^3.0"
+    "ccmbenchmark/ting": "^3.0",
+    "squizlabs/php_codesniffer": "^2.9"
   }
 }
