--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,10 @@
   "autoload": {
     "psr-4": {
       "CCMBenchmark\\TingGenerator\\": "src/TingGenerator"
-    }
+    },
+    "bin": [
+      "bin/application.php"
+    ]
   },
   "require": {
     "php": ">=5.5",
